[tool.poetry]
name = "cascad"
version = "0.1.0"
description = ""
authors = ["lxl <dreammakerlxl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cascad.app:main"
